--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "testes-web-cypress",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,7 +15,11 @@
     "@badeball/cypress-cucumber-preprocessor": "^20.0.5",
     "@bahmutov/cypress-esbuild-preprocessor": "^2.2.0",
     "@faker-js/faker": "^8.4.1",
-    "cypress": "^13.8.0",
+    "cypress": "^13.9.0",
     "esbuild": "^0.20.2"
-  }
+  },
+  "devDependencies": {
+    "mocha": "^10.4.0"
+  },
+  "description": ""
 }
